@@ -197,9 +197,6 @@ struct SCIP_Negate
 /** variable of the problem */
 struct SCIP_Var
 {
-#ifndef NDEBUG
-   SCIP*                 scip;               /**< SCIP data structure */
-#endif
    SCIP_Real             obj;                /**< objective function value of variable (might be changed temporarily in probing mode)*/
    SCIP_Real             unchangedobj;       /**< unchanged objective function value of variable (ignoring temporary changes in probing mode) */
    SCIP_Real             branchfactor;       /**< factor to weigh variable's branching score with */
@@ -277,6 +274,9 @@ struct SCIP_Var
    unsigned int          eventqueueimpl:1;   /**< is an IMPLADDED event on this variable currently in the event queue? */
    unsigned int          delglobalstructs:1; /**< is variable marked to be removed from global structures (cliques etc.)? */
    unsigned int          relaxationonly:1;   /**< TRUE if variable has been introduced only to define a relaxation */
+#ifndef NDEBUG
+   SCIP*                 scip;               /**< SCIP data structure */
+#endif
 };
 
 #ifdef __cplusplus
